Needs better docs but this helps

--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@react-hook/debounce",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "author": "Jared Lunde <jared@BeStellar.co> (https://BeStellar.co)",
   "license": "MIT",
   "sideEffects": false,
   "module": "dist/es/index.js",
-  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/useDebounce",
+  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/debounce",
   "scripts": {
     "build": "yarn run build:es && yarn run build:cjs",
     "build:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src --out-dir dist/es && npm run prettier:es",
@@ -29,5 +29,13 @@
   "peerDependencies": {
     "prop-types": "^15.6.0",
     "react": "^16.8.0"
-  }
+  },
+  "keywords": [
+    "react",
+    "react hook",
+    "hook",
+    "react hooks",
+    "hooks",
+    "debounce"
+  ]
 }
