--- a/packages/throttle/package.json
+++ b/packages/throttle/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@react-hook/throttle",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "author": "Jared Lunde <jared@BeStellar.co> (https://BeStellar.co)",
   "license": "MIT",
   "sideEffects": false,
   "module": "dist/es/index.js",
-  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/useThrottle",
+  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/throttle",
   "scripts": {
     "build": "yarn run build:es && yarn run build:cjs",
     "build:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src --out-dir dist/es && npm run prettier:es",
@@ -29,5 +29,13 @@
   },
   "dependencies": {
     "@render-props/utils": "^0.2.13"
-  }
+  },
+  "keywords": [
+    "react",
+    "react hook",
+    "hook",
+    "react hooks",
+    "hooks",
+    "throttle"
+  ]
 }
