--- a/packages/window-scroll/package.json
+++ b/packages/window-scroll/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@react-hook/window-scroll",
-  "version": "1.0.0",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "author": "Jared Lunde <jared@BeStellar.co> (https://BeStellar.co)",
   "license": "MIT",
   "sideEffects": false,
   "module": "dist/es/index.js",
-  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/useWindowScroll",
+  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/window-scroll",
   "scripts": {
     "build": "yarn run build:es && yarn run build:cjs",
     "build:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src --out-dir dist/es && npm run prettier:es",
@@ -28,7 +28,18 @@
     "react": "^16.8.0"
   },
   "dependencies": {
-    "@react-hook/throttle": "^0.1.0",
+    "@react-hook/throttle": "^0.1.1",
     "empty": "^0.10.1"
-  }
+  },
+  "keywords": [
+    "react",
+    "react hook",
+    "hook",
+    "react hooks",
+    "hooks",
+    "window scroll",
+    "scroll position",
+    "viewport",
+    "viewport scroll"
+  ]
 }
