--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -1,26 +1,24 @@
 {
   "name": "@react-hook/window-size",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
   "author": "Jared Lunde <jared@BeStellar.co> (https://BeStellar.co)",
   "license": "MIT",
   "sideEffects": false,
-  "module": "dist/es/index.js",
-  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/useWindowSize",
+  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/window-size",
   "scripts": {
-    "build": "yarn run build:es && yarn run build:cjs",
-    "build:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src --out-dir dist/es && npm run prettier:es",
-    "build:cjs": "rimraf dist/cjs && cross-env NODE_ENV=production BABEL_ENV=cjs babel src --out-dir dist/cjs && npm run prettier:cjs",
+    "build": "yarn build:es && yarn build:cjs && yarn build-throttled:es && yarn build-throttled:cjs",
+    "build:es": "rimraf dist/es && mkdir -p dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src/index.js --out-file dist/es/index.js",
+    "build:cjs": "rimraf dist/cjs && mkdir -p dist/cjs && cross-env NODE_ENV=production BABEL_ENV=cjs babel src/index.js --out-file dist/cjs/index.js",
+    "build-throttled:es": "rimraf throttled/es && mkdir -p throttled/es && cross-env NODE_ENV=production BABEL_ENV=es babel src/throttled.js --out-file throttled/es/index.js",
+    "build-throttled:cjs": "rimraf throttled/cjs && mkdir -p throttled/cjs && cross-env NODE_ENV=production BABEL_ENV=cjs babel src/throttled.js --out-file throttled/cjs/index.js",
     "watch:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src -w --out-dir dist/es",
-    "prettier": "prettier --single-quote --no-semi --no-bracket-spacing --trailing-comma es5 --write",
-    "prettier:es": "yarn prettier \"dist/es/**/*.js\"",
-    "prettier:cjs": "yarn prettier \"dist/cjs/**/*.js\"",
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
     "@stellar-apps/babel-preset-es": "^1.0.4",
     "@stellar-apps/babel-preset-react": "^1.0.1",
-    "prettier": "^1.16.4",
     "rimraf": "^2.6.3"
   },
   "peerDependencies": {
@@ -28,7 +26,23 @@
     "react": "^16.8.0"
   },
   "dependencies": {
-    "@react-hook/debounce": "^0.1.0",
+    "@react-hook/debounce": "^0.1.1",
+    "@react-hook/throttle": "^0.1.1",
     "empty": "^0.10.1"
-  }
+  },
+  "keywords": [
+    "react",
+    "react hook",
+    "hook",
+    "react hooks",
+    "hooks",
+    "window size",
+    "window width",
+    "window height",
+    "window",
+    "viewport size",
+    "viewport width",
+    "viewport height",
+    "viewport"
+  ]
 }
