--- a/packages/mouse-position/package.json
+++ b/packages/mouse-position/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-hook/mouse-position",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/cjs/index.js",
   "author": "Jared Lunde <jared@BeStellar.co> (https://BeStellar.co)",
   "license": "MIT",
@@ -22,7 +22,10 @@
     "react hook",
     "hook",
     "react hooks",
-    "hooks"
+    "hooks",
+    "mousemove",
+    "mouse position",
+    "mouse tracker"
   ],
   "devDependencies": {
     "@stellar-apps/babel-preset-es": "^1.0.4",
