--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -1,41 +1,84 @@
 {
   "name": "@react-hook/debounce",
-  "version": "1.0.2",
-  "main": "dist/cjs/index.js",
-  "author": "Jared Lunde <jared@BeStellar.co> (https://BeStellar.co)",
+  "version": "1.0.3",
+  "author": "Jared Lunde <jared@BeStellar.co> (https://jaredLunde.com)",
   "license": "MIT",
-  "sideEffects": false,
+  "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
-  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/debounce",
-  "scripts": {
-    "build": "yarn run build:es && yarn run build:cjs",
-    "build:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src --out-dir dist/es && npm run prettier:es",
-    "build:cjs": "rimraf dist/cjs && cross-env NODE_ENV=production BABEL_ENV=cjs babel src --out-dir dist/cjs && npm run prettier:cjs",
-    "watch:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src -w --out-dir dist/es",
-    "prettier": "prettier --single-quote --no-semi --no-bracket-spacing --trailing-comma es5 --write",
-    "prettier:es": "yarn prettier \"dist/es/**/*.js\"",
-    "prettier:cjs": "yarn prettier \"dist/cjs/**/*.js\"",
-    "prepublishOnly": "yarn build"
-  },
-  "devDependencies": {
-    "@stellar-apps/babel-preset-es": "^1.0.4",
-    "@stellar-apps/babel-preset-react": "^1.0.1",
-    "prettier": "^1.16.4",
-    "rimraf": "^2.6.3"
-  },
-  "dependencies": {
-    "@essentials/request-timeout": "^1.0.0"
-  },
-  "peerDependencies": {
-    "prop-types": "^15.6.0",
-    "react": "^16.8.0"
-  },
+  "files": [
+    "/dist"
+  ],
+  "description": "A react hook for debouncing values and callbacks.",
   "keywords": [
     "react",
     "react hook",
     "hook",
     "react hooks",
     "hooks",
-    "debounce"
-  ]
+    "debounce",
+    "debounce hook",
+    "react hook debounce"
+  ],
+  "sideEffects": false,
+  "devDependencies": {
+    "@lunde/babel-preset-es": "^1.0.1",
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.1.3",
+    "@testing-library/react-hooks": "^2.0.1",
+    "babel-eslint": "^10.0.2",
+    "cross-env": "^5.2.0",
+    "eslint": "^6.2.1",
+    "eslint-import-resolver-jest": "^3.0.0",
+    "eslint-plugin-jest": "^22.15.2",
+    "eslint-plugin-react": "^7.14.3",
+    "husky": "^3.0.4",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.2.3",
+    "mock-raf": "^1.0.1",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-test-renderer": "^16.9.0",
+    "rimraf": "^3.0.0"
+  },
+  "dependencies": {
+    "@essentials/request-timeout": "^1.0.1"
+  },
+  "peerDependencies": {
+    "prop-types": ">= 15.6.0",
+    "react": ">= 16.8.0"
+  },
+  "scripts": {
+    "build": "npm run build:cjs && npm run build:es",
+    "build:cjs": "babel src -d dist/cjs -x .js --ignore \"**/*.test.js\",\"**/test.js\" --delete-dir-on-start",
+    "build:es": "cross-env BABEL_ENV=es babel src -d dist/es -x .js  --ignore \"**/*.test.js\",\"**/test.js\" --delete-dir-on-start",
+    "format": "npm run format:cjs && npm run format:es && npm run format:src",
+    "format:cjs": "prettier --write \"dist/cjs/**/*.js\"",
+    "format:es": "prettier --write \"dist/es/**/*.js\"",
+    "format:src": "prettier --write \"src/**/*.js\"",
+    "lint": "eslint src",
+    "prepublishOnly": "npm run lint && npm run test && npm run build && npm run format",
+    "test": "jest",
+    "validate": "npm run lint && npm run test -- --coverage"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "eslint",
+      "pretty-quick --staged"
+    ]
+  },
+  "homepage": "https://github.com/jaredLunde/react-hook/tree/master/packages/debounce#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jaredLunde/react-hook.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jaredLunde/react-hook/issues"
+  }
 }
