--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -40,6 +40,7 @@
     "eslint-import-resolver-jest": "^3.0.0",
     "eslint-plugin-jest": "^22.15.2",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
     "lint-staged": "^9.2.3",
