--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@react-hook/window-size",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "Jared Lunde <jared@BeStellar.co> (https://jaredLunde.com)",
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
   "files": [
-    "/dist"
+    "/dist",
+    "/throttled"
   ],
   "description": "React hooks for updating components when the size of the `window` changes.",
   "keywords": [
