--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-hook/window-size",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "author": "Jared Lunde <jared@BeStellar.co> (https://jaredLunde.com)",
   "license": "MIT",
   "main": "dist/cjs/index.js",
@@ -87,7 +87,7 @@
       "pretty-quick --staged"
     ]
   },
-  "homepage": "https://github.com/jaredLunde/@react-hook/tree/master/packages/window-size#readme",
+  "homepage": "https://github.com/jaredLunde/react-hook/tree/master/packages/window-size#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/jaredLunde/react-hook.git"
