--- a/packages/intersection-observer/package.json
+++ b/packages/intersection-observer/package.json
@@ -1,22 +1,12 @@
 {
   "name": "@react-hook/intersection-observer",
-  "version": "1.0.1",
-  "main": "dist/cjs/index.js",
-  "author": "Jared Lunde <jared@BeStellar.co> (https://BeStellar.co)",
+  "version": "1.0.0",
+  "homepage": "https://github.com/jaredLunde/react-hook#readme",
+  "repository": "github:jaredLunde/react-hook",
+  "bugs": "https://github.com/jaredLunde/react-hook/issues",
+  "author": "Jared Lunde <jared@BeStellar.co> (https://jaredLunde.com)",
   "license": "MIT",
-  "sideEffects": false,
-  "module": "dist/es/index.js",
-  "repository": "https://github.com/jaredLunde/react-hook/tree/master/packages/intersection-observer",
-  "scripts": {
-    "build": "yarn run build:es && yarn run build:cjs",
-    "build:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src --out-dir dist/es && npm run prettier:es",
-    "build:cjs": "rimraf dist/cjs && cross-env NODE_ENV=production BABEL_ENV=cjs babel src --out-dir dist/cjs && npm run prettier:cjs",
-    "watch:es": "rimraf dist/es && cross-env NODE_ENV=production BABEL_ENV=es babel src -w --out-dir dist/es",
-    "prettier": "prettier --single-quote --no-semi --no-bracket-spacing --trailing-comma es5 --write",
-    "prettier:es": "yarn prettier \"dist/es/**/*.js\"",
-    "prettier:cjs": "yarn prettier \"dist/cjs/**/*.js\"",
-    "prepublishOnly": "yarn build"
-  },
+  "description": "",
   "keywords": [
     "react",
     "react hook",
@@ -26,17 +16,60 @@
     "intersection",
     "intersection observer"
   ],
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
+  "files": [
+    "/dist"
+  ],
+  "sideEffects": false,
+  "scripts": {
+    "build": "npm run build:cjs && npm run build:es",
+    "build:cjs": "babel src -d dist/cjs -x .js --ignore \"**/*.test.js\",\"**/test.js\" --delete-dir-on-start",
+    "build:es": "cross-env BABEL_ENV=es babel src -d dist/es -x .js --ignore \"**/*.test.js\",\"**/test.js\" --delete-dir-on-start",
+    "format": "prettier --write \"**/*.{js,jsx,md,yml,json,babelrc,eslintrc,prettierrc}\"",
+    "lint": "eslint .",
+    "prepublishOnly": "npm run lint && npm run test && npm run build && npm run format",
+    "test": "jest",
+    "validate": "npm run lint && npm run test -- --coverage"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": [
+      "eslint",
+      "prettier --write"
+    ],
+    "**/*.{md,yml,json,babelrc,eslintrc,prettierrc}": [
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
-    "@stellar-apps/babel-preset-es": "^1.0.4",
-    "@stellar-apps/babel-preset-react": "^1.0.1",
-    "prettier": "^1.16.4",
+    "@babel/preset-react": "latest",
+    "@lunde/babel-preset-es": "latest",
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@testing-library/react-hooks": "latest",
+    "babel-eslint": "latest",
+    "cross-env": "latest",
+    "eslint": "latest",
+    "eslint-import-resolver-jest": "latest",
+    "eslint-plugin-jest": "latest",
+    "eslint-plugin-react": "latest",
+    "eslint-plugin-react-hooks": "latest",
+    "husky": "latest",
+    "jest": "latest",
+    "lint-staged": "latest",
+    "prettier": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-test-renderer": "latest",
     "rimraf": "^2.6.3"
   },
-  "peerDependencies": {
-    "prop-types": "^15.6.0",
-    "react": "^16.8.0"
-  },
   "dependencies": {
-    "intersection-observer": "^0.5.1"
-  }
+    "@react-hook/passive-layout-effect": "^1.0.1"
+  },
+  "peerDependencies": {}
 }
