--- a/packages/merged-ref.bak/.babelrc
+++ b/packages/merged-ref.bak/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": [
+    "@babel/preset-react",
     [
       "@lunde/es",
       {
@@ -7,7 +8,8 @@
           "targets": {
             "node": "8"
           }
-        }
+        },
+        "typescript": false
       }
     ]
   ],
@@ -23,7 +25,7 @@
                 "browsers": "> 2%"
               }
             },
-            "objectAssign": false
+            "typescript": false
           }
         ]
       ]
