--- a/packages/passive-layout-effect/package.json
+++ b/packages/passive-layout-effect/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@react-hook/passive-layout-effect",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "Jared Lunde <jared@BeStellar.co> (https://jaredLunde.com)",
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
+  "types": "types/index.d.ts",
   "files": [
     "/dist"
   ],
