--- a/packages/intersection-observer/.babelrc
+++ b/packages/intersection-observer/.babelrc
@@ -1,6 +1,5 @@
 {
   "presets": [
-    "@babel/preset-react",
     [
       "@lunde/es",
       {
@@ -8,8 +7,7 @@
           "targets": {
             "node": "8"
           }
-        },
-        "typescript": false
+        }
       }
     ]
   ],
@@ -25,8 +23,7 @@
                 "browsers": "> 2%"
               }
             },
-            "objectAssign": false,
-            "typescript": false
+            "objectAssign": false
           }
         ]
       ]
