--- a/packages/switch.bak/.eslintrc
+++ b/packages/switch.bak/.eslintrc
@@ -1,24 +1,24 @@
 {
-  "parser": "@typescript-eslint/parser",
+  "parser": "babel-eslint",
   "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "experimentalObjectRestSpread": true
     }
   },
-  "plugins": ["@typescript-eslint", "jest", "react", "react-hooks"],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:jest/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:jest/recommended"
+  ],
+  "plugins": [
+    "jest",
+    "react",
+    "react-hooks"
   ],
   "rules": {
-    "@typescript-eslint/member-delimiter-style": "off",
-    "@typescript-eslint/interface-name-prefix": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-ts-ignore": "off",
-    "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/no-use-before-define": "off",
     "no-console": "off",
     "no-prototype-builtins": "off",
     "react/no-children-prop": "off",
@@ -42,7 +42,7 @@
   },
   "overrides": [
     {
-      "files": ["**/test.ts", "**/*.test.ts", "**/test.tsx", "**/*.test.tsx"],
+      "files": ["**/test.js", "**/*.test.js"],
       "settings": {
         "import/resolver": {
           "jest": {
